--- a/kontakty.html
+++ b/kontakty.html
@@ -7,7 +7,7 @@
 <body bgcolor="e2fff4">
 
 <div class="container">
-    <div class="fix"><img src = "agr.png" class="image"><div class="textnusl">АГРОУСАДЬБА "GREEN HOUSE"</div></div>
+    <div class="fix"><img src = "./images/agr.png" class="image"><div class="textnusl">АГРОУСАДЬБА "GREEN HOUSE"</div></div>
 
 
     <div class="kont1">Местонахождение</div>    
@@ -31,21 +31,21 @@
 
 
 
-    <div class="t1"><img width="70px" height="70px" src="adres.png"></div>
+    <div class="t1"><img width="70px" height="70px" src="./images/adres.png"></div>
 
-    <div class="t2"><img width="70px" height="70px" src="telephon.png"></div>
+    <div class="t2"><img width="70px" height="70px" src="./images/telephon.png"></div>
 
-    <div class="t3"><img width="70px" height="70px" src="email.png"></div>
+    <div class="t3"><img width="70px" height="70px" src="./images/email.png"></div>
 
-    <div class="t4"><img width="70px" height="70px" src="vremya.png"></div>
+    <div class="t4"><img width="70px" height="70px" src="./images/vremya.png"></div>
 
 <div class="fix"><div class="sq"></div><div class="text9">Контакты</div></div>
-<div class="fix"><div class="text7"><b><a href="index.html" target="_self"><img width="90px" height="90px" src="house.png"></a></b></div></div>
+<div class="fix"><div class="text7"><b><a href="index.html" target="_self"><img width="90px" height="90px" src="./images/house.png"></a></b></div></div>
 
 
-   <div class="fix"> <div class="inst"><a href="https://www.instagram.com/usadba_greenhouse" target="_self"><img width="70px" height="70px" style="border-radius: 30%" src="inst.jpg"></a></div>
-    <div class="fcb"><a href="https://www.facebook.com/Meta" target="_self"><img width="70px" height="70px" style="border-radius: 30%" src="fcb.jpg"></a></div>    
-    <div class="vk"><a href="https://vk.com/vk" target="_self"><img width="70px" height="70px" style="border-radius: 30%" src="vk.jpg"></a></div></div>
+   <div class="fix"> <div class="inst"><a href="https://www.instagram.com/usadba_greenhouse" target="_self"><img width="70px" height="70px" style="border-radius: 30%" src="./images/inst.jpg"></a></div>
+    <div class="fcb"><a href="https://www.facebook.com/Meta" target="_self"><img width="70px" height="70px" style="border-radius: 30%" src="./images/fcb.jpg"></a></div>    
+    <div class="vk"><a href="https://vk.com/vk" target="_self"><img width="70px" height="70px" style="border-radius: 30%" src="./images/vk.jpg"></a></div></div>
 
 
 </body>
