--- a/photo.html
+++ b/photo.html
@@ -24,76 +24,76 @@
             <div class="carousel-window">
                 <div class="carousel-slides">
                     <div class="carousel-item">
-                    <img src="12.jpg" alt="">
+                    <img src="./images/12.jpg" alt="">
                     </div>
                     <div class="carousel-item">
-                    <img src="1.jpg" alt="">
+                    <img src="./images/1.jpg" alt="">
                     </div>
                     <div class="carousel-item">
-                        <img src="2.jpg" alt="">
+                        <img src="./images/2.jpg" alt="">
                     </div>
                     <div class="carousel-item">
-                        <img src="3.jpg" alt="">
+                        <img src="./images/3.jpg" alt="">
                     </div>
                     <div class="carousel-item">
-                        <img src="4.jpg" alt="">
+                        <img src="./images/4.jpg" alt="">
                     </div>
                     <div class="carousel-item">
-                        <img src="5.jpg" alt="">
+                        <img src="./images/5.jpg" alt="">
                     </div>
                     <div class="carousel-item">
-                        <img src="6.jpg" alt="">
+                        <img src="./images/6.jpg" alt="">
                     </div>
                     <div class="carousel-item">
-                        <img src="7.jpg" alt="">
+                        <img src="./images/7.jpg" alt="">
                     </div>
                     <div class="carousel-item">
-                        <img src="8.jpg" alt="">
+                        <img src="./images/8.jpg" alt="">
                     </div>
                     <div class="carousel-item">
-                        <img src="9.jpg" alt="">
+                        <img src="./images/9.jpg" alt="">
                     </div>
                     <div class="carousel-item">
-                        <img src="10.jpg" alt="">
+                        <img src="./images/10.jpg" alt="">
                     </div>
                     <div class="carousel-item">
-                        <img src="11.jpg" alt="">
+                        <img src="./images/11.jpg" alt="">
                     </div>                    
                     <div class="carousel-item">
-                        <img src="13.jpg" alt="">
+                        <img src="./images/13.jpg" alt="">
                     </div>
                     <div class="carousel-item">
-                        <img src="14.jpg" alt="">
+                        <img src="./images/14.jpg" alt="">
                     </div>
                     <div class="carousel-item">
-                        <img src="15.jpg" alt="">
+                        <img src="./images/15.jpg" alt="">
                     </div>
                     <div class="carousel-item">
-                        <img src="16.jpg" alt="">
+                        <img src="./images/16.jpg" alt="">
                     </div>
                     <div class="carousel-item">
-                        <img src="17.jpg" alt="">
+                        <img src="./images/17.jpg" alt="">
                     </div>
                     <div class="carousel-item">
-                        <img src="18.jpg" alt="">
+                        <img src="./images/18.jpg" alt="">
                     </div>
                     <div class="carousel-item">
-                        <img src="19.jpg" alt="">
+                        <img src="./images/19.jpg" alt="">
                     </div>
                     <div class="carousel-item">
-                        <img src="20.jpg" alt="">
+                        <img src="./images/20.jpg" alt="">
                     </div>
                     <div class="carousel-item">
-                        <img src="21.jpg" alt="">
+                        <img src="./images/21.jpg" alt="">
                     </div>
                     <div class="carousel-item">
-                        <img src="22.jpg" alt="">
+                        <img src="./images/22.jpg" alt="">
                     </div>
                     <div class="carousel-item">
-                        <img src="23.jpg" alt="">
+                        <img src="./images/23.jpg" alt="">
                     </div>
                     <div class="carousel-item">
-                        <img src="24.jpg" alt="">
+                        <img src="./images/24.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -108,189 +108,189 @@
 
 
 <a href="#img1">
-<div class="layer1"><img width="200px" height="150px" src="1.jpg"></div>
+<div class="layer1"><img width="200px" height="150px" src="./images/1.jpg"></div>
 </a>
 <a href="#" class="lightbox" id="img1">
-<span style="background-image: url('1.jpg')"></span>
+<span style="background-image: url('./images/1.jpg')"></span>
 </a>
 
 <a href="#img2">
-<div class="layer2"><img width="200px" height="150px" src="2.jpg"></div>
+<div class="layer2"><img width="200px" height="150px" src="./images/2.jpg"></div>
 </a>
 <a href="#" class="lightbox" id="img2">
-<span style="background-image: url('2.jpg')"></span>
+<span style="background-image: url('./images/2.jpg')"></span>
 </a>
 
 <a href="#img3">
-<div class="layer3"><img width="200px" height="150px" src="3.jpg"></div>
+<div class="layer3"><img width="200px" height="150px" src="./images/3.jpg"></div>
 </a>
 <a href="#" class="lightbox" id="img3">
-<span style="background-image: url('3.jpg')"></span>
+<span style="background-image: url('./images/3.jpg')"></span>
 </a>
 
 <a href="#img4">
-<div class="layer4"><img width="200px" height="150px" src="4.jpg"></div>
+<div class="layer4"><img width="200px" height="150px" src="./images/4.jpg"></div>
 </a>
 <a href="#" class="lightbox" id="img4">
-<span style="background-image: url('4.jpg')"></span>
+<span style="background-image: url('./images/4.jpg')"></span>
 </a>
 
 <a href="#img5">
-<div class="layer5"><img width="200px" height="150px" src="5.jpg"></div>
+<div class="layer5"><img width="200px" height="150px" src="./images/5.jpg"></div>
 </a>
 <a href="#" class="lightbox" id="img5">
-<span style="background-image: url('5.jpg')"></span>
+<span style="background-image: url('./images/5.jpg')"></span>
 </a>
 
 <a href="#img6">
-<div class="layer6"><img width="200px" height="150px" src="6.jpg"></div>
+<div class="layer6"><img width="200px" height="150px" src="./images/6.jpg"></div>
 </a>
 <a href="#" class="lightbox" id="img6">
-<span style="background-image: url('6.jpg')"></span>
+<span style="background-image: url('./images/6.jpg')"></span>
 </a>
 
 <a href="#img7">
-<div class="layer7"><img width="200px" height="150px" src="7.jpg"></div>
+<div class="layer7"><img width="200px" height="150px" src="./images/7.jpg"></div>
 </a>
 <a href="#" class="lightbox" id="img7">
-<span style="background-image: url('7.jpg')"></span>
+<span style="background-image: url('./images/7.jpg')"></span>
 </a>
 
 <a href="#img8">
-<div class="layer8"><img width="200px" height="150px" src="8.jpg"></div>
+<div class="layer8"><img width="200px" height="150px" src="./images/8.jpg"></div>
 </a>
 <a href="#" class="lightbox" id="img8">
-<span style="background-image: url('8.jpg')"></span>
+<span style="background-image: url('./images/8.jpg')"></span>
 </a>
 
 <a href="#img9">
-<div class="layer9"><img width="200px" height="150px" src="9.jpg"></div>
+<div class="layer9"><img width="200px" height="150px" src="./images/9.jpg"></div>
 </a>
 <a href="#" class="lightbox" id="img9">
-<span style="background-image: url('9.jpg')"></span>
+<span style="background-image: url('./images/9.jpg')"></span>
 </a>
 
 <a href="#img10">
-<div class="layer10"><img width="200px" height="150px" src="10.jpg"></div>
+<div class="layer10"><img width="200px" height="150px" src="./images/10.jpg"></div>
 </a>
 <a href="#" class="lightbox" id="img10">
-  <span style="background-image: url('10.jpg')"></span>
+  <span style="background-image: url('./images/10.jpg')"></span>
 </a>
 
 <a href="#img11">
-<div class="layer11"><img width="200px" height="150px" src="11.jpg"></div>
+<div class="layer11"><img width="200px" height="150px" src="./images/11.jpg"></div>
 </a>
 <a href="#" class="lightbox" id="img11">
-  <span style="background-image: url('11.jpg')"></span>
+  <span style="background-image: url('./images/11.jpg')"></span>
 </a>
 
 <a href="#img12">
-<div class="layer12"><img width="200px" height="150px" src="12.jpg"></div>
+<div class="layer12"><img width="200px" height="150px" src="./images/12.jpg"></div>
 </a>
 <a href="#" class="lightbox" id="img12">
-  <span style="background-image: url('12.jpg')"></span>
+  <span style="background-image: url('./images/12.jpg')"></span>
 </a>
 
 <a href="#img13">
-<div class="layer13"><img width="200px" height="150px" src="13.jpg"></div>
+<div class="layer13"><img width="200px" height="150px" src="./images/13.jpg"></div>
 </a>
 <a href="#" class="lightbox" id="img13">
-  <span style="background-image: url('13.jpg')"></span>
+  <span style="background-image: url('./images/13.jpg')"></span>
 </a>
 
 <a href="#img14">
-<div class="layer14"><img width="200px" height="150px" src="14.jpg"></div>
+<div class="layer14"><img width="200px" height="150px" src="./images/14.jpg"></div>
 </a>
 <a href="#" class="lightbox" id="img14">
-  <span style="background-image: url('14.jpg')"></span>
+  <span style="background-image: url('./images/14.jpg')"></span>
 </a>
 
 <a href="#img15">
-<div class="layer15"><img width="200px" height="150px" src="15.jpg"></div>
+<div class="layer15"><img width="200px" height="150px" src="./images/15.jpg"></div>
 </a>
 <a href="#" class="lightbox" id="img15">
-  <span style="background-image: url('15.jpg')"></span>
+  <span style="background-image: url('./images/15.jpg')"></span>
 </a>
 
 <a href="#img16">
-<div class="layer16"><img width="200px" height="150px" src="16.jpg"></div>
+<div class="layer16"><img width="200px" height="150px" src="./images/16.jpg"></div>
 </a>
 <a href="#" class="lightbox" id="img16">
-  <span style="background-image: url('16.jpg')"></span>
+  <span style="background-image: url('./images/16.jpg')"></span>
 </a>
 
 <a href="#img17">
-<div class="layer17"><img width="200px" height="150px" src="17.jpg"></div>
+<div class="layer17"><img width="200px" height="150px" src="./images/17.jpg"></div>
 </a>
 <a href="#" class="lightbox" id="img17">
-  <span style="background-image: url('17.jpg')"></span>
+  <span style="background-image: url('./images/17.jpg')"></span>
 </a>
 
 <a href="#img18">
-<div class="layer18"><img width="200px" height="150px" src="18.jpg"></div>
+<div class="layer18"><img width="200px" height="150px" src="./images/18.jpg"></div>
 </a>
 <a href="#" class="lightbox" id="img18">
-  <span style="background-image: url('18.jpg')"></span>
+  <span style="background-image: url('./images/18.jpg')"></span>
 </a>
 
 <a href="#img19">
-<div class="layer19"><img width="200px" height="150px" src="19.jpg"></div>
+<div class="layer19"><img width="200px" height="150px" src="./images/19.jpg"></div>
 </a>
 <a href="#" class="lightbox" id="img19">
-  <span style="background-image: url('19.jpg')"></span>
+  <span style="background-image: url('./images/19.jpg')"></span>
 </a>
 
 <a href="#img20">
-<div class="layer20"><img width="200px" height="150px" src="20.jpg"></div>
+<div class="layer20"><img width="200px" height="150px" src="./images/20.jpg"></div>
 </a>
 <a href="#" class="lightbox" id="img20">
-  <span style="background-image: url('20.jpg')"></span>
+  <span style="background-image: url('./images/20.jpg')"></span>
 </a>
 
 <a href="#img21">
-<div class="layer21"><img width="200px" height="150px" src="21.jpg"></div>
+<div class="layer21"><img width="200px" height="150px" src="./images/21.jpg"></div>
 </a>
 <a href="#" class="lightbox" id="img21">
-  <span style="background-image: url('21.jpg')"></span>
+  <span style="background-image: url('./images/21.jpg')"></span>
 </a>
 
 <a href="#img22">
-<div class="layer22"><img width="200px" height="150px" src="22.jpg"></div>
+<div class="layer22"><img width="200px" height="150px" src="./images/22.jpg"></div>
 </a>
 <a href="#" class="lightbox" id="img22">
-  <span style="background-image: url('22.jpg')"></span>
+  <span style="background-image: url('./images/22.jpg')"></span>
 </a>
 
 <a href="#img23">
-<div class="layer23"><img width="200px" height="150px" src="23.jpg"></div>
+<div class="layer23"><img width="200px" height="150px" src="./images/23.jpg"></div>
 </a>
 <a href="#" class="lightbox" id="img23">
-  <span style="background-image: url('23.jpg')"></span>
+  <span style="background-image: url('./images/23.jpg')"></span>
 </a>
 
 <a href="#img24">
-<div class="layer24"><img width="200px" height="150px" src="24.jpg"></div>
+<div class="layer24"><img width="200px" height="150px" src="./images/24.jpg"></div>
 </a>
 <a href="#" class="lightbox" id="img24">
-<span style="background-image: url('24.jpg')"></span>
+<span style="background-image: url('./images/24.jpg')"></span>
 </a>
 
 
 <a href="#img0">
-<div class="layer0"><img width="200px" height="150px" src="24.jpg"></div>
+<div class="layer0"><img width="200px" height="150px" src="./images/24.jpg"></div>
 </a>
 <a href="#" class="lightbox" id="img0">
-  <span style="background-image: url('24.jpg')"></span>
+  <span style="background-image: url('./images/24.jpg')"></span>
 </a>
 
 
 <div class="fix"><div class="sq"></div><div class="text9">Фото</div></div>
-<div class="fix"><div class="text7"><b><a href="index.html" target="_self"><img width="90px" height="90px" src="house.png"></a></b></div></div>
+<div class="fix"><div class="text7"><b><a href="index.html" target="_self"><img width="90px" height="90px" src="./images/house.png"></a></b></div></div>
 
 
-<div class="fix"><div class="inst"><a href="https://www.instagram.com/usadba_greenhouse" target="_self"><img width="70px" height="70px" style="border-radius: 30%" src="inst.jpg"></a></div>
-<div class="fcb"><a href="https://www.facebook.com/Meta" target="_self"><img width="70px" height="70px" style="border-radius: 30%" src="fcb.jpg"></a></div>    
-<div class="vk"><a href="https://vk.com/vk" target="_self"><img width="70px" height="70px" style="border-radius: 30%" src="vk.jpg"></a></div></div>
+<div class="fix"><div class="inst"><a href="https://www.instagram.com/usadba_greenhouse" target="_self"><img width="70px" height="70px" style="border-radius: 30%" src="./images/inst.jpg"></a></div>
+<div class="fcb"><a href="https://www.facebook.com/Meta" target="_self"><img width="70px" height="70px" style="border-radius: 30%" src="./images/fcb.jpg"></a></div>    
+<div class="vk"><a href="https://vk.com/vk" target="_self"><img width="70px" height="70px" style="border-radius: 30%" src="./images/vk.jpg"></a></div></div>
 
 </body>
 </html>
